--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "cn.coolspan.open.android_increment_update"
         minSdkVersion 16
         targetSdkVersion 23
-        versionCode 2
-        versionName "1.2.1"
+        versionCode 1
+        versionName "1.0"
     }
     buildTypes {
         release {
@@ -30,4 +30,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.android.support:design:23.2.0'
+    compile 'com.alibaba:fastjson:1.2.12'
 }
