--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -25,8 +26,8 @@
         </activity>
 
         <service
-            android:name=".service.IIncrementUpdateService"
-            android:exported="true">
+
+            android:name=".service.IIncrementUpdateService">
             <intent-filter>
                 <action android:name="cn.coolspan.IncrementUpdateService" />
             </intent-filter>
